# VocaLinux

./: .gitignore  LICENSE.md  Makefile  pyproject.toml
doc/: Citations.md  helpers.typ  main.typ  references.typ
doc/sections/: abstract.typ  cover_page.typ  toc.typ
doc/sections_ar/: abstract.typ  chapter_1.typ  chapter_2.typ  chapter_3.typ  cover_page.typ  toc.typ
doc/sections_en/: abstract.typ  chapter_1.typ  chapter_2.typ  chapter_3.typ  cover_page.typ  toc.typ
scripts/: metrics_plot.py  slope_calc.py
src/: interpret.py
src/VocaLinux/: vocalinux.py
src/VocaLinux/configs/: dataset.py  interpreter.py  model.py  training.py
src/VocaLinux/data/: dataset.py
src/VocaLinux/interpreter/: config.py  path_resolver.py  translator.py
src/VocaLinux/model/: las_model.py  vocabulary.py
src/VocaLinux/model/layers/: __init__.py  attention.py  listener.py  speller.py
src/VocaLinux/model/training/: callbacks.py  evaluate.py  main.py  plot.py  test.py  train.py
src/interpreter/: error.py  interpreter.py  parse_argument.py  parse_capital_options.py  parse_command.py  parse_long_options.py  parse_options.py  test_path_resolver.py  test_translator.py  translator.py
src/model/: callbacks.py  config.py  dataset.py  las_model.py  plotting.py  vocabulary.py
src/model/dataset_loader/: loader.py  speech_dataset.py
src/model/layers/: attention.py  listener.py  old_speller+attention.py  pblstm.py  speller.py
src/model/models/: attention.py  listener.py  model.py  speller.py
src/model/spec_augment/: method.py  spec_augment.py
(+2 files in other folders)
