[project]
name = "speech-to-linux-commands"
version = "0.1.0"
description = "AI model that transcribes speech to linux commands."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "librosa==0.11",
    "matplotlib==3.7.2",
    "numpy==1.26.4",
    "torch==2.6.0",
    "torchmetrics==1.7.1",
    "tqdm==4.67.1",
]

[tool.black]
line-length = 100
