[project]
name = "speech-to-linux-commands"
version = "0.1.0"
description = "AI model that transcribes speech to linux commands."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jiwer==4.0.0",
    "librosa==0.11",
    "matplotlib==3.7.2",
    "multiprocess==0.70.15",
    "numpy==1.26.4",
    "tensorflow==2.18",
    "tensorflow-datasets==4.9.8",
    "types-tensorflow>=2.18.0.20250516",
]

[tool.black]
line-length = 100
